# open_code_orchestrator

./: .gitignore  README.md  pyproject.toml
browser_operator/: README.md  package-lock.json  package.json
browser_operator/scenarios/: bridge-client.js  project01-smoke.js
browser_operator/src/: schemas.js  server.js  session-manager.js
docs/: agent-connection-playbook.md  agent-team-map.md  delivery-roadmap.md  monorepo-structure.md  project.agent.example.json
scripts/: demo_visualizer_integration.py  import_browser_smoke_report.py
src/api_integration_agent/: README.md  __init__.py  manifest.py  models.py  runtime.py
src/bitrix24_agent/: README.md  __init__.py  client.py  config.py  endpoint_map.json  executors.py  manifest.py  models.py  planner.py  runtime.py  utils.py
src/business_rules_agent/: README.md  __init__.py  manifest.py  models.py  runtime.py
src/data_sync_agent/: README.md  __init__.py  manifest.py  models.py  runtime.py
src/database_agent/: README.md  __init__.py  manifest.py  models.py  runtime.py
src/devops_agent/: README.md  __init__.py  manifest.py  models.py  runtime.py
src/frontend_ui_agent/: README.md  __init__.py  manifest.py  models.py  runtime.py
src/migration_agent/: README.md  __init__.py  manifest.py  models.py  runtime.py
src/observability_agent/: README.md  __init__.py  manifest.py  models.py  runtime.py
src/opencode_orchestrator/: __init__.py  agents.py  approval.py  browser_smoke.py  cli.py  config.py  orchestrator.py  project_profile.py  reporting.py  (+2 more)
tests/: test_cli.py  test_config.py  test_imports.py
(+87 files in other folders)
